Bug 107111 - FILESAVE: hyperlink text disappears after opening&saving specific DOCX (with some index/TOC before the link)
Summary: FILESAVE: hyperlink text disappears after opening&saving specific DOCX (with ...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.3.7.2 release
Hardware: All Linux (All)
: high major
Assignee: Vasily Melenchuk (CIB)
URL:
Whiteboard: target:6.0.0 target:5.4.4
Keywords: bibisected, bibisectRequest, dataLoss, regression
Depends on:
Blocks: DOCX Hyperlink
  Show dependency treegraph
 
Reported: 2017-04-12 09:12 UTC by Cor Nouws
Modified: 2017-11-15 11:33 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
test docx file for hyperlink text that disappers (440.51 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2017-04-12 09:12 UTC, Cor Nouws
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Cor Nouws 2017-04-12 09:12:32 UTC
Created attachment 132504 [details]
test docx file for hyperlink text that disappers

Attached a docx file to test.

1. Open in LibreOffice
   Note link " Marqit Client Portal " in the last line
2. Save (as) docx again
3. Close and reopen.
   > Text of link is lost, but link is still there (see Navigator)

If you remove the Index/TOC before saving, the link text remains fine.
I could not reproduce this with a clean file without TOC.
SaveAs ODT also leaves the link text OK.
Comment 1 Cor Nouws 2017-04-12 09:49:32 UTC
3.3.0.4 conserves link, but doesn't show index - different issue

4.1.6.2 conserves link, but mangles index, places text on next page (and on opening has an image in the background, that should not be there - different issue)

4.2.8.2 conserves link, all fine (apart from fact that there is a background image, that is on top after save&reopen - different issue)

4.3.7.2 has the same problems as my recent daily > regression
Comment 3 Commit Notification 2017-10-20 00:08:42 UTC
Vasily Melenchuk committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=8743a4172e5a168992f36e408c5db688a959000c

tdf#107111: DOCX export: restore HideTabLeader... attribute after TOX

It will be available in 6.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Cor Nouws 2017-11-06 14:42:02 UTC
confirmed in Version: 6.0.0.0.alpha1+
Build ID: 8ea346b87c8f62d93bec283515abae8db36a08ed
CPU threads: 4; OS: Linux 4.13; UI render: default; VCL: gtk2; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2017-11-01_00:17:05
Locale: nl-NL (nl_NL.UTF-8); Calc: group

great fix - thanks!
Comment 5 Gabor Kelemen (Collabora) 2017-11-13 13:30:32 UTC
Can we have this backported to 5.4 branch please?
Comment 6 Commit Notification 2017-11-15 11:33:42 UTC
Vasily Melenchuk committed a patch related to this issue.
It has been pushed to "libreoffice-5-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a4713560e3b4b7dc3d72e3811e41ff9c4feda24a&h=libreoffice-5-4

tdf#107111: DOCX export: restore HideTabLeader... attribute after TOX

It will be available in 5.4.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.