tdf#107111: DOCX export: restore HideTabLeader... attribute after TOX

Previously m_bHideTabLeaderAndPageNumbers value was not restored after TOX
finish and so causing visibility problems with following hyperlinks.

Change-Id: I4ba5ce1f70e05d706d17d60e1a33a62995701f9e
Reviewed-on: https://gerrit.libreoffice.org/43310
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Thorsten Behrens <Thorsten.Behrens@CIB.de>

 Conflicts:
	sw/qa/extras/ooxmlexport/ooxmlexport9.cxx

(cherry picked from commit e0558f967aa39dbf8162f4b7589e238e9a0ae7c4)